basic login signup implemented

--- a/client/components.json
+++ b/client/components.json
@@ -5,13 +5,13 @@
   "tsx": false,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "/src/index.css",
+    "css": "./src/index.css",
     "baseColor": "gray",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
-    "components": "/src",
+    "components": "@/*",
     "utils": "@/lib/utils"
   }
 }
